--- a/trunk/hermes.test/hermes.test.csproj
+++ b/trunk/hermes.test/hermes.test.csproj
@@ -66,9 +66,9 @@
       <Project>{E06001EE-45A1-41E1-9CEC-ED8CD621F8FB}</Project>
       <Name>hermes.core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\hermes\hermes.csproj">
-      <Project>{46C5CF45-88C4-4338-BFEF-2267007F4B0D}</Project>
-      <Name>hermes</Name>
+    <ProjectReference Include="..\hermes.web\hermes.web.csproj">
+      <Project>{86964D17-B860-49EE-AAF3-72EDE336A5DF}</Project>
+      <Name>hermes.web</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
