--- a/trunk/hermes.web/hermes.web.csproj
+++ b/trunk/hermes.web/hermes.web.csproj
@@ -107,6 +107,12 @@
     <Content Include="Views\Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\hermes.core\hermes.core.csproj">
+      <Project>{E06001EE-45A1-41E1-9CEC-ED8CD621F8FB}</Project>
+      <Name>hermes.core</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
   </ItemGroup>
