--- a/trunk/hermes.core/hermes.core.csproj
+++ b/trunk/hermes.core/hermes.core.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30428</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{E06001EE-45A1-41E1-9CEC-ED8CD621F8FB}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Domain\RssFeedAggregate\IRssFeedRepository.cs" />
     <Compile Include="Domain\RssFeedAggregate\RssFeed.cs" />
+    <Compile Include="Opml.cs" />
+    <Compile Include="OpmlOutline.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
